--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -63,7 +63,9 @@ main {
 }
 
 .card {
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  margin-top: 5px;
+  box-shadow: 0 0 7px 4px rgb(37, 1, 70);
+  background-color: #4527A0;
 }
 
 .card__header,
