--- a/server/public/css/product.css
+++ b/server/public/css/product.css
@@ -1,3 +1,11 @@
+.add-product {
+    display: flex;
+    max-width: 100%;
+    padding: 0 1.7rem 1.5rem 1.7rem;
+    box-shadow: 0 0 7px 4px rgb(19, 23, 128);
+    background-color: #272fa0;
+}
+
 .product-form {
     width: 20rem;
     max-width: 90%;
@@ -22,5 +30,7 @@
 
 .product__description {
     text-align: center;
+    word-wrap: break-word
 }
+
 
