--- a/client/src/components/form/Form.css
+++ b/client/src/components/form/Form.css
@@ -6,7 +6,7 @@
     background-color: rgb(18, 8, 38);
     padding-bottom: 30px;
 }
-.novos-cardapio__controls {
+.Form__controls {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
@@ -14,21 +14,66 @@
     text-align: left;
 }
   
-.novos-cardapio__control label {
-font-weight: bold;
-margin-bottom: 0.5rem;
-display: block;
+.Form__control label {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    display: block;
 }
 
-.novos-cardapio__control input {
-font: inherit;
-padding: 0.5rem;
-border-radius: 6px;
-border: 1px solid #ccc;
-width: 20rem;
-max-width: 100%;
+.Form__control input {
+    font: inherit;
+    padding: 0.5rem;
+    border-radius: 6px;
+    border: 1px solid #ccc;
+    width: 20rem;
+    max-width: 100%;
 }
 
-.novos-cardapio__actions {
-text-align: right;
+.Form__actions_active {
+    text-align: right;
+}
+
+.Form__actions_active button {
+    font: inherit;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+    border: 1px solid #00575d;
+    background-color: #09ca80;
+    border: 1px solid black;
+    color: white;
+    border-radius: 12px;
+    margin-right: 1rem;
+    }
+    
+.Form__actions_active button:hover,
+.Form__actions_active button:active {
+    background-color: #510674;
+    border-color: white;
+}
+
+.Form__actions_active button.alternative {
+    color: #220131;
+    border-color: transparent;
+    background-color: transparent;
+}
+
+.Form__actions_active button.alternative:hover,
+.Form__actions_active button.alternative:active {
+    background-color: #ddb3f8;
+    border-color: white;
+}
+
+.Form__actions_inactive {
+    text-align: right;
+}
+
+.Form__actions_inactive button {
+    font: inherit;
+    padding: 0.5rem 1rem;
+    border: 1px solid #002224;
+    background-color: #05593879;
+    border: 1px solid black;
+    color: white;
+    border-radius: 12px;
+    margin-right: 1rem;
 }
