--- a/flask-react/client/src/components/View/View.module.css
+++ b/flask-react/client/src/components/View/View.module.css
@@ -1,4 +1,4 @@
-.Log {
+.View {
     display: flex;
     color: white;
     align-items: center;
@@ -9,7 +9,7 @@
     padding-bottom: 30px;
 }
 
-.Log__controls {
+.View__controls {
     display: flex;
     flex-wrap: wrap;
     gap: 1rem;
@@ -17,7 +17,7 @@
     text-align: left;
 }
   
-.Log__control label {
+.View__control label {
     font-weight: bold;
     margin-bottom: 0.5rem;
     display: block;
