--- a/flask-react/client/src/components/form/Form.module.css
+++ b/flask-react/client/src/components/form/Form.module.css
@@ -34,7 +34,7 @@
   
 .Form__control label {
     font-weight: bold;
-    margin-bottom: 0.5rem;
+    margin: 0.5rem 0 0.5rem 0;
     display: block;
 }
 
